--- a/pom.xml
+++ b/pom.xml
@@ -34,5 +34,20 @@
         <artifactId>junit-jupiter-api</artifactId>
         <version>5.10.0</version>
     </dependency>
-</dependencies>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.14.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.objenesis</groupId>
+            <artifactId>objenesis-tck</artifactId>
+            <version>3.3</version>
+        </dependency>
+    </dependencies>
 </project>
