--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,11 @@
             <artifactId>objenesis-tck</artifactId>
             <version>3.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>testcontainers</artifactId>
+            <version>1.18.3</version>
+        </dependency>
+
     </dependencies>
 </project>
